--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.transactions.Transactions">
+    tools:context=".fragments.transactions.TransactionsSummary">
 
 
     <androidx.recyclerview.widget.RecyclerView
