--- a/app/src/main/res/layout/fragment_stakeholder_filter.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_filter.xml
@@ -7,6 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".fragments.stakeholders.StakeholderFilter">
 
+    <TextView
+        android:id="@+id/lblStakeholderFilterAttributes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="Attributes"
+        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_roles"
+        app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_roles" />
+
     <Button
         android:id="@+id/btn_cancel_FilterStakeholder"
         android:layout_width="150dp"
@@ -46,36 +55,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.chip.Chip
+    <CheckBox
         android:id="@+id/stakeholder_filter_all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="All"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_name"
+        app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterRoles" />
+
+    <LinearLayout
+        android:id="@+id/stakeholder_filter_roles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_all"
+        app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_all"
+        android:orientation="vertical" />
+
+    <TextView
+        android:id="@+id/lblStakeholderFilterRoles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Roles"
+        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_name"
         app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_name" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/stakeholder_filter_group"
+    <CheckBox
+        android:id="@+id/stakeholder_filter_debt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_all" />
-
-    <com.google.android.material.chip.Chip
-        android:id="@+id/stakeholder_filter_indebt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="In Debt"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_group" />
+        app:layout_constraintStart_toStartOf="@+id/lblStakeholderFilterAttributes"
+        app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterAttributes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
