--- a/app/src/main/res/layout/fragment_stakeholder_filter.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_filter.xml
@@ -60,6 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:checked="true"
         android:text="All"
         app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_name"
         app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterRoles" />
