--- a/app/src/main/res/layout/fragment_stakeholder_display.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_display.xml
@@ -95,11 +95,11 @@
         app:layout_constraintTop_toBottomOf="@+id/lblDisplayStakeholders1" />
 
     <Button
-        android:id="@+id/btn_close_DisplayStakeholder"
+        android:id="@+id/btn_delete_DisplayStakeholder"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:background="@drawable/buttons"
-        android:text="@string/close"
+        android:text="Delete"
         app:layout_constraintEnd_toStartOf="@+id/btn_edit_DisplayStakeholder"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +115,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btn_close_DisplayStakeholder" />
+        app:layout_constraintStart_toEndOf="@+id/btn_delete_DisplayStakeholder" />
 
     <TextView
         android:id="@+id/lblDisplayStakeholders1"
