--- a/app/src/main/res/layout/fragment_stakeholder_filter.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_filter.xml
@@ -121,6 +121,7 @@
             android:id="@+id/stakeholder_filter_byName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="Name" />
 
         <RadioButton
