--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -163,10 +163,9 @@
         android:background="@drawable/buttons"
         android:text="@string/confirm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ed_txt_notes"
         app:layout_constraintHorizontal_bias="0.85"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ed_txt_notes" />
 
     <Button
         android:id="@+id/btn_cancel_NewTransaction"
