--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -107,7 +107,11 @@
         android:id="@+id/stakeholderNew"
         android:name="be.kuleuven.elcontador10.fragments.stakeholders.StakeholderNew"
         android:label="fragment_stakeholder_new"
-        tools:layout="@layout/fragment_stakeholder_new" />
+        tools:layout="@layout/fragment_stakeholder_new" >
+        <action
+            android:id="@+id/action_stakeholderNew_to_stakeholderSummary"
+            app:destination="@id/stakeholderSummary" />
+    </fragment>
     <fragment
         android:id="@+id/stakeholderSummary"
         android:name="be.kuleuven.elcontador10.fragments.stakeholders.StakeholderSummary"
