--- a/app/src/main/res/layout/fragment_stakeholder_new.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_new.xml
@@ -136,4 +136,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/StakeholderNewPhoneNumber" />
+
+    <ImageView
+        android:id="@+id/StakeholderNewImageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="10dp"
+        app:srcCompat="@drawable/icon_stakeholder"
+        app:layout_constraintBottom_toTopOf="@+id/btn_cancel_NewTransaction"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_picture_NewStakeholder"
+        tools:srcCompat="@drawable/icon_stakeholder" />
 </androidx.constraintlayout.widget.ConstraintLayout>
