--- a/app/src/main/res/layout/fragment_transactions_filter.xml
+++ b/app/src/main/res/layout/fragment_transactions_filter.xml
@@ -113,7 +113,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:background="@drawable/buttons"
-        android:text="@string/close"
+        android:text="Clear"
         app:layout_constraintBottom_toBottomOf="@+id/btn_filter_FilterTrans"
         app:layout_constraintEnd_toStartOf="@+id/btn_filter_FilterTrans"
         app:layout_constraintHorizontal_bias="0.5"
