--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -142,33 +142,21 @@
             android:layout_marginTop="5dp"
             android:scrollbars="vertical"
             android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/btn_close_NewTransaction"
+            app:layout_constraintBottom_toTopOf="@+id/btn_Delete_DisplayTransaction"
             app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplayDate"
             app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay7"
             app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay7" />
 
         <Button
-            android:id="@+id/btn_edit_DisplayTransaction"
+            android:id="@+id/btn_Delete_DisplayTransaction"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:background="@drawable/buttons"
-            android:text="@string/edit"
+            android:text="Delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/btn_close_NewTransaction" />
-
-        <Button
-            android:id="@+id/btn_close_NewTransaction"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/buttons"
-            android:text="@string/close"
-            app:layout_constraintEnd_toStartOf="@+id/btn_edit_DisplayTransaction"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btn_edit_DisplayTransaction" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
