--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -66,6 +66,9 @@
         <argument
             android:name="id"
             app:argType="string" />
+        <action
+            android:id="@+id/action_transactionDisplay_to_transactions_summary"
+            app:destination="@id/transactions_summary" />
     </fragment>
     <fragment
         android:id="@+id/newTransaction"
