--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -11,7 +11,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".fragments.transactions.TransactionNew"
-    android:id="@+id/frameLayout2">
+    android:id="@+id/frameLayout2"
+    android:paddingBottom="20dp"
+    >
 
 
 
@@ -177,6 +179,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ed_txt_notes"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
