dates for filter transactions with a widget

--- a/app/src/main/res/layout/fragment_transactions_filter.xml
+++ b/app/src/main/res/layout/fragment_transactions_filter.xml
@@ -100,7 +100,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:textSize="20sp"
+        android:textSize="25sp"
+        android:enabled="false"
         android:hint="@string/dd_mm_yyyy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/FilterTransFromSwitch"
@@ -121,8 +122,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
+        android:enabled="false"
         android:hint="@string/dd_mm_yyyy"
-        android:textSize="20sp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/FilterTransFromSwitch"
         app:layout_constraintTop_toBottomOf="@+id/FilterTransToSwitch" />
